docs/2.0/Functions-Getters.md
# Getter Functions

Functions on this page return values that track the work that SparkleStore is doing. `SparkleGetRecentActivity()` is particularly useful for showing disk activity as part of console compliance requirements. The other functions are less useful but can occasionally assist with debugging.

&nbsp;

## …GetRecentActivity

`SparkleGetRecentActivity([milliseconds=1200])`

**Returns:** number

|Name          |Datatype|Purpose                                                                      |
|--------------|--------|-----------------------------------------------------------------------------|
|`milliseconds`|number  |Time window for recent activity. Defaults to 1,200 milliseconds (1.2 seconds)|

Returns whether there was save/load activity recently within the given timespan. This is useful for setting up a save/load indicator in your game's UI.

&nbsp;

## …GetBusy

`SparkleGetBusy()`

**Returns:** number

|Name|Datatype|Purpose|
|----|--------|-------|
|None|        |       |

Returns if SparkleStore is waiting for any save/load/delete/exists operations to complete. This function returns the opposite of `SpakleGetIdle()`.

&nbsp;

## …GetIdle

`SparkleGetIdle()`

**Returns:** number

|Name|Datatype|Purpose|
|----|--------|-------|
|None|        |       |

Returns if SparkleStore has no pending jobs that are yet to complete. This function returns the opposite of `SpakleGetBusy()`.

&nbsp;

## …CancelAll

`SparkleCancelAll([executeCallbacks=false])`

**Returns:** number

|Name                |Datatype|Purpose                                                                                    |
|--------------------|--------|-------------------------------------------------------------------------------------------|
|`[executeCallbacks]`|boolean |Whether to execute callbacks. Defaults to `false` which means no callbacks will be executed|

Cancels all current pending operations. If you set the optional `executeCallbacks` parameter to `true` then callbacks for the operations will be executed as "failed".

&nbsp;

## …GetPath

`SparkleGetPath()`

**Returns:** number

|Name         |Datatype|Purpose                                                             |
|-------------|--------|--------------------------------------------------------------------|
|`filename`   |string  |Filename to get the path for                                        |
|`[groupName]`|string  |Save operation group name to use. Defaults to the current group name|

Returns the absolute path to a file. This function only works when running on a desktop platform; on other platforms, this function will return `undefined`. By default, this function will use the current group name to build the returned path. However, you may override the group name by specifying the `groupName` parameter.

&nbsp;

## …GetSteamCloud

`SparkleGetSteamCloud()`

**Returns:** boolean

|Name|Datatype|Purpose|
|----|--------|-------|
|N/A |        |       |

Returns if Steam Cloud is enabled. The requires all of the following to be true:

- The game is running on Windows, MacOS, or Linux
- The game is using YoYoGames' Steamworks extension
- Steam is open and running
- The application is owed by the player
- The application has been installed
- The application is set up to use Steam Cloud
- The user has enabled Steam Cloud for their account

Please note that `SPARKLE_ALLOW_STEAM_FILE` and `SoarkleSetSteamFile()` can alter where and how files are saved/loaded. If either is `false`, files will be saved to local storage and won't necesarily be backed up using Steam Cloud.

&nbsp;

## …GetTotalPending

`SparkleGetTotalPending()`

**Returns:** number

|Name|Datatype|Purpose|
|----|--------|-------|
|N/A |        |       |

Returns the total number of pending operations.

&nbsp;

## …GetSavePending

`SparkleGetSavePending()`

**Returns:** number

|Name|Datatype|Purpose|
|----|--------|-------|
|N/A |        |       |

Returns the number of pending save operations.

&nbsp;

## …GetLoadPending

`SparkleGetLoadPending()`

**Returns:** number

|Name|Datatype|Purpose|
|----|--------|-------|
|N/A |        |       |

Returns the number of pending load operations.

&nbsp;

## …GetSaveRecent

`SparkleGetSaveRecent()`

**Returns:** number

|Name|Datatype|Purpose|
|----|--------|-------|
|N/A |        |       |

Returns the number of save operations completed in the last minute.

&nbsp;

## …GetLoadRecent

`SparkleGetLoadRecent()`

**Returns:** number

|Name|Datatype|Purpose|
|----|--------|-------|
|N/A |        |       |

Returns the number of load operations completed in the last minute.